Prevent clipping of dropdown boxes, specifically the Activity box in Update Issue form

--- a/sass/_forms.sass
+++ b/sass/_forms.sass
@@ -25,6 +25,7 @@ form
       border-color: $link_hover_color
   select
     margin: ($form_element_padding + 1) 0
+    max-width: 99%
 
   // It would be nice if submit buttons had a class or a containing element
   input[type=submit]
